Committing for assistance